# oscoin

./: .dockerignore  .ghci  .ghcid  .gitignore  .hlint.yaml  .stylish-haskell.yaml  .weeder.yaml  API  CONTRIBUTING  DESIGN  HACKING  LICENSE  NOTES  README  README.rst  STYLE  STYLEGUIDE.rst  background.md  cabal.project  cabal.project.freeze  cloudbuild.yaml  oscoin.cabal  package.yaml  snapshot.yaml  stack.yaml
.circleci/: check-fmt.sh  config.yml
.github/ISSUE_TEMPLATE/: 1-bug-report.md  2-new-feature.md  3-improvement.md
cli/: DESIGN  Main.hs
client/: Main.hs
data/: blockstore.sql  config.yaml  genesis.yaml
data/rad/: prelude.rad
data/seeds/: example.yaml
docs/: address_format.lhs  address_format.md  docker.md  telemetry.lhs  telemetry.md
exe/cli/: DESIGN  Main.hs
exe/deploy/: Main.hs
exe/git-remote-helper/: Main.hs
exe/node/: Main.hs
git-remote-helper/lib/oscoin/: post-merge.githook  pre-push.githook
node/: Main.hs
node/rad/: prelude.rad
scripts/: check-fmt.sh  check-haskell-format.sh  check-shell-format.sh  ci-cache.sh  ci.sh  publish-image.sh  shellcheck.sh  view-haddocks.sh
scripts/deploy/gce/: bootstrap  monitoring  node
scripts/docker/: build-image.sh  publish-image.sh
scripts/docker/haskell-scratch/: Makefile
scripts/gce/: port-forward
src/: Main.hs  Oscoin.hs
src/Codec/Serialise/: JSON.hs  Orphans.hs
src/Control/Concurrent/: RateLimit.hs
src/Crypto/Data/Auth/: Tree.hs  TreeExample.hs
src/Crypto/Hash/: Multi.hs
src/Data/Aeson/: Extended.hs
src/Data/Binary/: Decoding.hs
src/Data/ByteArray/: Orphans.hs
src/Data/ByteString/: BaseN.hs
src/Data/ByteString/Base64/: Extended.hs
src/Data/Conduit/: Serialise.hs
src/Data/Map/: RefCounted.hs
src/Data/Numbers/: Fibonacci.hs
src/Data/Sequence/: Circular.hs
src/Database/SQLite/Simple/: Orphans.hs
src/GHC/Generics/: Orphans.hs
src/Network/Gossip/: HyParView.hs  Plumtree.hs
src/Network/Gossip/HyParView/: Internal.hs  Periodic.hs
src/Network/Gossip/IO/: Peer.hs  Run.hs  Socket.hs  Wire.hs
src/Network/Gossip/Plumtree/: Scheduler.hs
src/Network/Socket/: Serialise.hs
src/Oscoin/: Account.hs  Address.hs  Block.hs  CLI.hs  Clock.hs  Configuration.hs  Consensus.hs  Crypto.hs  Deployment.hs  Environment.hs  HTTP.hs  Logging.hs  Metrics.hs  Node.hs  Org.hs  P2P.hs  Patch.hs  Prelude.hs  Protocol.hs  ProtocolConfig.hs  State.hs  Storage.hs  Telemetry.hs  Time.hs  Transaction.hs  User.hs  View.hs
src/Oscoin/API/: Client.hs  HTTP.hs  Types.hs
src/Oscoin/API/Client/: HTTP.hs
src/Oscoin/API/HTTP/: Client.hs  Handlers.hs  Internal.hs  Response.hs  Result.hs
src/Oscoin/Account/: Issue.hs  Membership.hs  Repository.hs  Transaction.hs
src/Oscoin/CLI/: Backend.hs  Changeset.hs  Command.hs  KeyStore.hs  Parser.hs  Radicle.hs  Revision.hs  Spinner.hs  User.hs
src/Oscoin/CLI/Backend/: HTTP.hs
src/Oscoin/CLI/Command/: Result.hs
src/Oscoin/Consensus/: BlockStore.hs  Class.hs  Config.hs  Evaluator.hs  Mining.hs  Nakamoto.hs  Shared.hs  Simple.hs  Types.hs  Validation.hs
src/Oscoin/Consensus/BlockStore/: Class.hs
src/Oscoin/Consensus/Evaluator/: Radicle.hs
src/Oscoin/Consensus/Nakamoto/: Lenient.hs
src/Oscoin/Crypto/: Address.hs  Blockchain.hs  Hash.hs  Orphans.hs  PubKey.hs
src/Oscoin/Crypto/Address/: Bech32.hs  Internal.hs  Serialisation.hs
src/Oscoin/Crypto/Blockchain/: Block.hs  Eval.hs  Genesis.hs
src/Oscoin/Crypto/Hash/: Mock.hs  RealWorld.hs
src/Oscoin/Crypto/PubKey/: FileStore.hs  Internal.hs  Mock.hs  RealWorld.hs
src/Oscoin/Data/: Ledger.hs  Operation.hs  OscoinTx.hs  Query.hs  RadicleTx.hs  Tx.hs
src/Oscoin/Data/Tx/: Abstract.hs
src/Oscoin/Deployment/: Node.hs  Options.hs
src/Oscoin/Deployment/Internal/: CloudInit.hs  Docker.hs  GCE.hs  Systemd.hs
src/Oscoin/Deployment/Node/: GCE.hs  Options.hs
src/Oscoin/Git/Remote/: Constants.hs  GitArgs.hs  GitCmd.hs  Helper.hs  IOUtil.hs
src/Oscoin/HTTP/: API.hs  Handlers.hs  Internal.hs
src/Oscoin/HTTP/API/: Response.hs  Result.hs
src/Oscoin/Node/: Channel.hs  Mempool.hs  Options.hs  Service.hs  State.hs  Trans.hs  Tree.hs
src/Oscoin/Node/Mempool/: Class.hs  Event.hs  Internal.hs
src/Oscoin/Node/State/: Mempool.hs  Tree.hs
src/Oscoin/Org/: Issue.hs  Membership.hs  Repository.hs  Transaction.hs
src/Oscoin/P2P/: Block.hs  Class.hs  Connection.hs  Disco.hs  Discovery.hs  Gossip.hs  Handshake.hs  Internal.hs  Simple.hs  Trace.hs  Transaction.hs  Transport.hs  Types.hs
src/Oscoin/P2P/Disco/: GCE.hs  MDns.hsc  Options.hs  Trace.hs
src/Oscoin/P2P/Discovery/: InMemory.hs  Internal.hs  Kademlia.hs  Multicast.hs  Pure.hs  Static.hs
src/Oscoin/P2P/Gossip/: Broadcast.hs  Connection.hs  Handshake.hs  IO.hs  Membership.hs  Wire.hs
src/Oscoin/P2P/Handshake/: Noise.hs  Simple.hs  (+2 more)
src/Oscoin/Protocol/: Internal.hs  Sync.hs  Trace.hs
src/Oscoin/Prototype/: V1.hs  V2.hs
src/Oscoin/State/: Tree.hs
src/Oscoin/Storage/: Block.hs  BlockTree.hs  ContentStore.hs  HashStore.hs  Internal.hs  Ledger.hs  Receipt.hs  State.hs  Transaction.hs
src/Oscoin/Telemetry/: Events.hs  Internal.hs  Logging.hs  Metrics.hs  Middleware.hs  Options.hs  Trace.hs
src/Oscoin/Time/: Chrono.hs
src/Oscoin/Transaction/: Mempool.hs
src/Radicle/: Conversion.hs  Extended.hs
src/System/Console/: Option.hs
static/debug/: blockchain.css  blockchain.js  xhr.js
static/debug/blockchain/: blockchain.js  index.html
test/: Main.hs
test/Control/Concurrent/: Tests.hs
test/Crypto/: Tests.hs
test/Data/Conduit/: Tests.hs
test/Integration/: Tests.hs
test/Integration/Test/: Executable.hs
test/Oscoin/: Tests.hs
test/Oscoin/Account/: Arbitrary.hs
test/Oscoin/Consensus/: Tests.hs  Trivial.hs
test/Oscoin/Org/: Arbitrary.hs
test/Oscoin/Test/: API.hs  CLI.hs  Clock.hs  Consensus.hs  Crypto.hs  Environment.hs  Helpers.hs  Metrics.hs  P2P.hs  Telemetry.hs  Time.hs  Util.hs
test/Test/: Sandbox.hs
test/Test/Hedgehog/: Extended.hs
test/Test/Oscoin/: API.hs  Configuration.hs  DummyLedger.hs  P2P.hs  Protocol.hs
test/Test/QuickCheck/: Extended.hs
txgen/: Main.hs
whitepaper/sections/: background.md
(+148 files in other folders)
