name:                oscoin
version:             0.1.0.0
synopsis:            open-source collaboration network
license:             BSD3
license-file:        LICENSE
author:              Alexis Sellier
maintainer:          alexis@monadic.xyz
copyright:           2018 Monadic
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:
      src

  exposed-modules:
      Oscoin.Prelude

    , Oscoin.Address
    , Oscoin.Account
    , Oscoin.Consensus
    , Oscoin.Environment
    , Oscoin.Node
    , Oscoin.Node.State
    , Oscoin.Node.State.Mempool
    , Oscoin.Node.State.Tree
    , Oscoin.Node.Service
    , Oscoin.Node.Channel
    , Oscoin.Patch
    , Oscoin.User

    , Oscoin.Crypto.Blockchain
    , Oscoin.Crypto.Blockchain.Block
    , Oscoin.Crypto.Hash
    , Oscoin.Crypto.PubKey

    , Oscoin.HTTP
    , Oscoin.HTTP.Handlers
    , Oscoin.HTTP.Internal
    , Oscoin.HTTP.API

    , Oscoin.Org
    , Oscoin.Org.Issue
    , Oscoin.Org.Membership
    , Oscoin.Org.Repository
    , Oscoin.Org.Transaction

    , Oscoin.State
    , Oscoin.State.Tree

    , Oscoin.Storage.Internal
    , Oscoin.Storage.Block

    , Oscoin.P2P
    , Oscoin.P2P.Internal
    , Oscoin.P2P.Transaction
    , Oscoin.P2P.Block

    , Oscoin.Transaction

  other-modules:
      Data.ByteString.Base64.Extended
      Crypto.Data.Auth.Tree

  build-depends:
      base
    , foundation

    , async
    , acid-state
    , aeson
    , binary
    , base16-bytestring
    , base58-bytestring
    , base64-bytestring
    , cryptonite
    , bytestring
    , containers
    , data-default
    , data-has
    , kademlia
    , monad-logger
    , mtl
    , stm >= 2.4.5.0
    , time
    , text
    , text-format
    , filepath
    , http-types
    , http-api-data
    , memory
    , merkle-tree
    , microlens
    , microlens-contra
    , microlens-mtl
    , microlens-aeson
    , monad-stm
    , network
    , network-simple
    , ansi-terminal
    , semigroups
    , Spock
    , stm
    , transformers
    , unordered-containers
    , wai
    , wai-middleware-static
    , wai-extra

  default-language:
      Haskell2010

  default-extensions:
    -- Prelude
      NoImplicitPrelude

    -- Syntax
    , ViewPatterns
    , ParallelListComp
    , OverloadedStrings
    , BangPatterns
    , TypeOperators

    -- Deriving
    , DeriveFunctor
    , DeriveFoldable
    , DeriveTraversable
    , DeriveGeneric
    , GeneralizedNewtypeDeriving
    , StandaloneDeriving

    -- Type system
    , ConstraintKinds
    , RankNTypes
    , TypeFamilies
    , TypeApplications
    , TypeSynonymInstances
    , FunctionalDependencies
    , ScopedTypeVariables
    , FlexibleInstances
    , FlexibleContexts
    , MultiParamTypeClasses
    , GADTs
    , InstanceSigs

    -- Records
    , RecordWildCards
    , NamedFieldPuns

    -- Future compatibility
    , MonadFailDesugaring

  ghc-options:
    -Wall
    -Wcompat
    -Wincomplete-uni-patterns
    -Wincomplete-record-updates
    -Wredundant-constraints
    -fno-warn-orphans
    -fno-warn-name-shadowing
    -fno-warn-unused-do-bind
    -fno-warn-unused-local-binds
    -fprint-unicode-syntax
    -fno-print-expanded-synonyms

executable oscoin
  main-is: src/Main.hs
  build-depends:
      base >=4.10 && <4.11
    , oscoin
  default-extensions:
      GADTs
    , NoImplicitPrelude
    , OverloadedStrings
    , TypeFamilies
  default-language:
      Haskell2010

test-suite test
  type:
      exitcode-stdio-1.0

  main-is:
      Main.hs

  hs-source-dirs:
      test

  other-modules:
      Oscoin.Tests
    , Oscoin.HTTP.Test.Helpers
    , Oscoin.Crypto.Hash.Arbitrary
    , Oscoin.Crypto.PubKey.Arbitrary
    , Oscoin.Crypto.Blockchain.Arbitrary
    , Oscoin.Org.Arbitrary
    , Oscoin.Test.Helpers

    , Crypto.Tests

  default-language:
      Haskell2010

  build-depends:
      base
    , aeson
    , binary
    , http-types
    , oscoin
    , QuickCheck
    , quickcheck-instances
    , tasty       >= 1.0.0.1
    , tasty-hunit >= 0.10.0.1
    , tasty-quickcheck
    , text
    , microlens
    , microlens-aeson
    , bytestring
    , Spock
    , wai
    , wai-extra

  default-extensions:
      GADTs
    , NoImplicitPrelude
    , ConstraintKinds
    , OverloadedStrings
    , TypeFamilies
    , NamedFieldPuns
    , ScopedTypeVariables
    , RecordWildCards

  ghc-options:
    -threaded -rtsopts -with-rtsopts=-N

source-repository head
  type: git
  location: https://monadic.phacility.com/source/oscoin
